# supercc

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
.supercc/: README.md  config.yaml
cc_feishu_bridge/: __init__.py  banner.py  config.py  cron_scheduler.py  dream.py  main.py  restarter.py  skill_md.py  skill_nudge.py  switcher.py
cc_feishu_bridge/claude/: cron_tools.py  feishu_file_tools.py  integration.py  memory_manager.py  memory_tools.py  session_manager.py  skill_search_tools.py
cc_feishu_bridge/feishu/: client.py  error_notifier.py  media.py  message_handler.py  token_store.py  ws_client.py
cc_feishu_bridge/format/: reply_formatter.py
cc_feishu_bridge/install/: api.py  flow.py  qr.py
cc_feishu_bridge/skill_search/: __init__.py  registry.py  sources.py
docs/: BUG_REPORT_thinking_signature.md
supercc/: __init__.py  __main__.py  banner.py  config.py  cron_scheduler.py  dream.py  logs.py  main.py  migration.py  onboard.py  restarter.py  skill_md.py  skill_nudge.py  switcher.py
supercc/claude/: cron_tools.py  feishu_file_tools.py  integration.py  memory_manager.py  memory_tools.py  model_config.py  model_providers.py  model_tools.py  session_manager.py  skill_search_tools.py  supercc_tools.py
supercc/evolve/: __init__.py  skill_nudge.py
supercc/feishu/: message_handler.py  ws_client.py
tests/: test_auth.py  test_banner.py  test_config_path.py  test_cron_scheduler.py  test_edit_diff.py  test_feishu_client.py  test_group_chat.py  test_install_api.py  test_integration.py  test_media.py  test_memory_manager.py  test_memory_user_open_id.py  test_qmd_import.py  test_reply_formatter.py  test_send_command.py  test_session_manager.py  test_token_store.py  test_validator.py  test_ws_client.py
(+53 files in other folders)
