[project]
name = "pysupercc"
version = "0.1.0"
description = "SuperCC — 超级 Claude Code，支持多平台（飞书、钉钉、微信等），具备记忆自优化和技能自进化能力"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "claude-agent-sdk>=0.1.59",
    "lark-oapi>=1.0.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.0",
    "qrcode>=7.4.0",
    "Pillow>=10.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "filelock>=3.13.0",
    "jieba>=0.42.1",
    "scikit-learn>=1.0",
    "croniter>=2.0",
    "rich>=13.0",
]
authors = [
    { name = "Hu1J", email = "2948696442@qq.com" },
]

[project.scripts]
supercc = "supercc.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["supercc*"]
